Fix word wrap in <pre> on iOS

--- a/src/scss/darth10.github.io.scss
+++ b/src/scss/darth10.github.io.scss
@@ -18,14 +18,14 @@ body {
 pre {
   overflow-x: scroll;
   overflow-y: hidden;
-  white-space: nowrap;
+  white-space: pre;
   padding: inherit;
   border: none;
   border-radius: 4px;
 
   code {
     @include code-font;
-    white-space: pre;
+    word-wrap: unset;
   }
 }
 
